--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "mocha-webpack": "^2.0.0-beta.0",
+    "moment": "^2.24.0",
     "node-uuid": "^1.4.7",
     "prop-types": "15.6.0",
     "react": "^16.2.0",
